test_suite/tests/ui/borrow/duplicate_lifetime.stderr
error: duplicate borrowed lifetime `'a`
 --> $DIR/duplicate_lifetime.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

